@@ -1,0 +1,69 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta content="text/html; charset=utf-8" http-equiv="content-type" />
+	<link href="{$baseURL}themes/{$curTheme}/{$curTheme}.css" rel="stylesheet" type="text/css" />
+	<link rel="icon" type="image/png" href="{$faviconURL}" />
+<title>{$title}</title>
+</head>
+<body>
+<div class="logo"></div>
+
+{foreach $menu as $menuItem}{$menuItem}{foreachelse}
+No menu found.
+{/foreach}
+
+
+<div class="userbuttons">
+	<span class="date">{$date}</span>
+	<span class="Servers">Match servers: <a href="{$baseURL}Servertracker/">{$onlinePlayers}</a></span>
+	<span class="onlineUsers">Website: <a href="{$baseURL}Online/">{$onlineUsers}</a></span>
+	{if isset($logoutURL)}<span class="logout"><a href="{$logoutURL}">Logout</a></span>{/if}
+</div>
+
+<div class="content">
+<div class="static_page_box">
+<p class="first_p">You may configure the CMS page assignments using this add-on. Please note that you <strong>can not overwrite hardcoded pages such as Login</strong>.</p>
+
+<p>Even though this add-on will try to prevent you from doing malicious operations, such as removing itself from active add-ons, <strong>please think twice before applying changes</strong>.</p>
+
+{if !empty($pages)}
+<form enctype="application/x-www-form-urlencoded" method="POST" action="./">
+<table class="nested_table">
+<caption>Pages in database</caption>
+<tr>
+	<th>Request Path</th>
+	<th>Title</th>
+	<th>Add-on</th>
+	<th>Action</th>
+</tr>
+
+{foreach item="page" from=$pages}
+<tr>
+	<td>
+		{$page.requestPath}
+	</td>
+	<td>
+		{$page.title}
+	</td>
+	<td>
+		{$page.addon}
+	</td>
+	<td>
+		<input type="submit" value="Change" />
+	</td>
+</tr>
+{/foreach}
+
+</table>
+</form>
+{/if}
+
+</div>
+{if isset($repositoryVersion)}
+<p>SVN revision: {$repositoryVersion}</p>
+{/if}
+</div>
+</body>
+</html>
